# DevLG

./: Cargo.toml  README.md  cliff.toml  deny.toml  install.sh
.github/workflows/: build.yml  release.yml
src/: main.rs  tests.rs
src/commands/: cp.rs  delete.rs  handlers.rs  list.rs  login.rs  mod.rs  modify.rs  tag.rs  template.rs  version.rs
src/config/: manager.rs
src/models/: session.rs
src/utils/: mod.rs  scp.rs  ssh.rs
src/utils/ssh/: ssh2_connector.rs  system_ssh.rs
