[package]
name = "devlg"
version = "0.1.5"
edition = "2024"
authors = ["chengzhycn <chengzhycn@gmail.com>"]
description = "A command-line SSH session manager"
license = "MIT"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
dirs = "6.0.0"
thiserror = "2.0.12"
dialoguer = "0.11"
rpassword = "7.3"
anyhow = "1.0.98"

[dev-dependencies]
tempfile = "3.20.0"
assert_fs = "1.1.3"
